# homework_6_bulk

./: .travis.yml  CMakeLists.txt  Handler.cpp  Handler.h  Observer.h  Parser.cpp  Parser.h  README.md  Writers.cpp  Writers.h  bulk.h  bulk_test.cpp  main.cpp  writers.h
